public/css/components/modale.css
.modale {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    width: 100%;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
}

.modale-content {
    margin: auto;
    background-color: var(--color-white);
    padding: 2rem;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    vertical-align: middle;
}

.modale-small{
    margin-top: 30vh;
    width: clamp(400px, 40%, 600px);
    align-items: center;
    gap: 1rem;
}

.modale-large {
    margin-top: 10vh;
    width: clamp(400px, 60%, 800px);
    gap: 2rem;
}

.modaleCTA {
    display: flex;
    gap: 1rem;
    justify-content: space-between;
}

